<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@color/bgcolor">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_img"
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/iv_agent_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            tools:src="@tools:sample/avatars"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/cvbg"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_toEndOf="@+id/cv_img"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="0dp"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cvbg">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@color/txtcolor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_agent_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tv_name"
                android:text="@string/item_name"
                android:textColor="@color/txtcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/role"
                android:textColor="@color/txtcolor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_marginTop="11dp"
                android:layout_marginStart="25dp"
                android:id="@+id/iv_agent_role"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/tv_agent_name"
                android:layout_toEndOf="@+id/tv_role"
                android:padding="1dp"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_agent_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/iv_agent_role"
                android:text="@string/item_role"
                android:textColor="@color/txtcolor"
                android:textSize="16sp"
                android:layout_below="@id/tv_agent_name"/>

            <TextView
                android:id="@+id/tv_bibliography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_role"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/bibliography"
                android:textColor="@color/txtcolor"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_agent_bibliography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_bibliography"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/item_bibliography"
                android:textColor="@color/txtcolor"
                android:textSize="11sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cv_img"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cvbg">

            <TextView
                android:id="@+id/tv_skill_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/skill_detail"
                android:textColor="@color/txtcolor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_skill_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_skill_detail"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/cv_skill_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_skill_detail">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cvbg">

                    <ImageView
                        android:id="@+id/iv_agent_skill_q"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tv_agent_skill_q_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_q"
                        android:text="@string/item_skill_name"
                        android:textColor="@color/txtcolor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_agent_skill_q_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_agent_skill_q_name"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_q"
                        android:text="@string/item_skill_detail"
                        android:textColor="@color/txtcolor"
                        android:textSize="11sp"
                        android:paddingEnd="5dp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_skill_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_skill_1"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/cv_skill_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_skill_1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cvbg">

                    <ImageView
                        android:id="@+id/iv_agent_skill_e"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tv_agent_skill_e_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_e"
                        android:text="@string/item_skill_name"
                        android:textColor="@color/txtcolor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_agent_skill_e_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_agent_skill_e_name"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_e"
                        android:text="@string/item_skill_detail"
                        android:textColor="@color/txtcolor"
                        android:textSize="11sp"
                        android:paddingEnd="5dp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_skill_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_skill_2"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/cv_skill_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_skill_2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cvbg">

                    <ImageView
                        android:id="@+id/iv_agent_skill_c"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tv_agent_skill_c_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_c"
                        android:text="@string/item_skill_name"
                        android:textColor="@color/txtcolor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_agent_skill_c_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_agent_skill_c_name"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_c"
                        android:text="@string/item_skill_detail"
                        android:textColor="@color/txtcolor"
                        android:textSize="11sp"
                        android:paddingEnd="5dp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_skill_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_skill_3"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_skill_3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cvbg">

                    <ImageView
                        android:id="@+id/iv_agent_skill_x"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="16dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tv_agent_skill_x_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_x"
                        android:text="@string/item_skill_name"
                        android:textColor="@color/txtcolor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_agent_skill_x_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_agent_skill_x_name"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/iv_agent_skill_x"
                        android:text="@string/item_skill_detail"
                        android:textColor="@color/txtcolor"
                        android:textSize="11sp"
                        android:paddingEnd="5dp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>